# Project-Acorn

./: .gitignore  5150emu.c  5150emu.h  B8086  LICENSE  Makefile  README  README.md  analyze_failures.sh  analyze_opcode_failures.sh  debug_add  debug_add.c  debug_modrm  debug_modrm.c  debug_movsb  debug_movsb.c  debug_pop.c  debug_single_opcode  debug_single_opcode.c  debug_single_test  debug_single_test.c  debug_test.c  full_test_results.txt  intel8086.c  intel8086.h  json_test_runner  json_test_runner.c  meson.build  new.asm  opcode.h  ram.dmp  run_all_tests.sh  test  test_c6  test_output.txt  test_pop_di.c  test_runner.c  test_single_file  test_single_file.c
docs/: DEVELOPMENT.md
tests/: README.md
